fix(dark-mode): correct dark mode styles

--- a/_sass/dark-mode.scss
+++ b/_sass/dark-mode.scss
@@ -26,7 +26,7 @@
 
     .post-content {
         a {
-            color: gray !important;
+            color: #d4d4d4 !important;
         }
     }
 
@@ -69,7 +69,7 @@
 
     .gsc-control-cse {
         color: black !important;
-    
+
         input {
             color: black !important;
         }
